(lang dune 3.8)

(using melange 0.1)

(name reason-auth)

(license "MIT")

(maintainers Paul Bacchus)

(authors Paul Bacchus)

(homepage https://github.com/psb/reason-auth)

(bug_reports https://github.com/psb/reason-auth/issues)

(package
 (allow_empty)
 (name reason-auth)
 (synopsis "3rd party components, authentication and ReasonReact")
 (description "3rd party components, authentication and ReasonReact"))
